kubernetes/core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert --out kubernetes
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: core
  name: core
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: core
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert --out kubernetes
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: core
    spec:
      containers:
        - env:
            - name: APPLICATION_HOST
            - name: KEYCLOAK_AUTH_PROTOCOL
            - name: KEYCLOAK_CLIENT_ID
            - name: KEYCLOAK_HOST
              value: keycloak
            - name: KEYCLOAK_REALM
            - name: MATOMO_TOKEN
              value: d3db1de2eddd98e5703ee279963b6c14
            - name: POSTGRES_HOST
              value: postgres
            - name: PUBLIC_URL_PROTOCOL
            - name: STATS_SERVICE_PROTOCOL
            - name: VAULT_TOKEN
              value: s.QSRXEE6mdus1NCVger5CqT89
            - name: VAULT_UNSEAL_KEY
              value: 6t1pxZHF/o0gFZLLs+kcVrIJmgG6U8oMD/xghiReor0=
          image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-core:0.3
          name: core
          resources:
            limits:
              memory: "268435456"
          tty: true
          volumeMounts:
            - mountPath: /sentry.properties
              name: core-claim0
      restartPolicy: Always
      volumes:
        - name: core-claim0
          persistentVolumeClaim:
            claimName: core-claim0
