kubernetes/crypto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert --out kubernetes
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: crypto
  name: crypto
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: crypto
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert --out kubernetes
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: crypto
    spec:
      containers:
        - image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-crypto:2.1.0
          name: crypto
          resources:
            limits:
              memory: "268435456"
          tty: true
          volumeMounts:
            - mountPath: /sentry.properties
              name: crypto-claim0
      restartPolicy: Always
      volumes:
        - name: crypto-claim0
          persistentVolumeClaim:
            claimName: crypto-claim0
status: {}
