kubernetes/external-signature-connector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert --out kubernetes
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: external-signature-connector
  name: external-signature-connector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: external-signature-connector
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert --out kubernetes
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: external-signature-connector
    spec:
      containers:
        - image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/external-signature-connector:develop
          name: external-signature-connector
          resources: {}
          tty: true
          volumeMounts:
            - mountPath: /application.properties
              name: external-signature-connector-claim0
      restartPolicy: Always
      volumes:
        - name: external-signature-connector-claim0
          persistentVolumeClaim:
            claimName: external-signature-connector-claim0
status: {}
