kubernetes/matomo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert --out kubernetes
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: matomo
  name: matomo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: matomo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert --out kubernetes
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: matomo
    spec:
      containers:
        - env:
            - name: MATOMO_DATABASE_DBNAME
              value: matomo
            - name: MATOMO_DATABASE_HOST
              value: matomo-db
            - name: MATOMO_DATABASE_PASSWORD
              value: matomo
            - name: MATOMO_DATABASE_USERNAME
              value: matomo
          image: matomo:4.2.1-fpm
          name: matomo
          resources:
            limits:
              memory: "1073741824"
          tty: true
          volumeMounts:
            - mountPath: /var/www/html
              name: iparapheur-matomo-internal-files
            - mountPath: /var/www/html/config/
              name: matomo-claim1
            - mountPath: /var/www/html/plugins/
              name: matomo-claim2
      restartPolicy: Always
      volumes:
        - name: iparapheur-matomo-internal-files
          persistentVolumeClaim:
            claimName: iparapheur-matomo-internal-files
        - name: matomo-claim1
          persistentVolumeClaim:
            claimName: matomo-claim1
        - name: matomo-claim2
          persistentVolumeClaim:
            claimName: matomo-claim2
status: {}
