kubernetes/pastell-connector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert --out kubernetes
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pastell-connector
  name: pastell-connector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pastell-connector
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert --out kubernetes
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: pastell-connector
    spec:
      containers:
        - env:
            - name: POSTGRES_HOST
              value: postgres
            - name: REDIS_HOST
              value: redis
            - name: REDIS_PORT
              value: "6379"
          image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/pastell-connector:develop
          name: pastell-connector
          resources: {}
          tty: true
      restartPolicy: Always
status: {}
