kubernetes/pdf-stamp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert --out kubernetes
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pdf-stamp
  name: pdf-stamp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pdf-stamp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert --out kubernetes
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: pdf-stamp
    spec:
      containers:
        - image: registry.libriciel.fr/signature/pdf-stamp:develop
          name: pdf-stamp
          resources:
            limits:
              memory: "268435456"
          tty: true
      restartPolicy: Always
status: {}
