kubernetes/pes-viewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert --out kubernetes
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pes-viewer
  name: pes-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pes-viewer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert --out kubernetes
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: pes-viewer
    spec:
      containers:
        - image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/pes-viewer:1.3.0
          name: pes-viewer
          resources:
            limits:
              memory: "268435456"
          tty: true
          volumeMounts:
            - mountPath: /pesPJ/
              name: pes-viewer-claim0
      restartPolicy: Always
      volumes:
        - name: pes-viewer-claim0
          persistentVolumeClaim:
            claimName: pes-viewer-claim0
status: {}
