kubernetes/vault-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert --out kubernetes
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: vault
  name: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vault
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose convert --out kubernetes
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: vault
    spec:
      containers:
        - args:
            - vault
            - server
            - -config=/vault/config/vault.json
          image: vault:1.6.2
          name: vault
          resources: {}
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          tty: true
          volumeMounts:
            - mountPath: /vault/config
              name: vault-claim0
            - mountPath: /vault/policies
              name: vault-claim1
            - mountPath: /vault/data
              name: vault-claim2
      restartPolicy: Always
      volumes:
        - name: vault-claim0
          persistentVolumeClaim:
            claimName: vault-claim0
        - name: vault-claim1
          persistentVolumeClaim:
            claimName: vault-claim1
        - name: vault-claim2
          persistentVolumeClaim:
            claimName: vault-claim2
status: {}
