kubernetes/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    io.kompose.service: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: nginx
    spec:
      containers:
        - env:
            - name: APPLICATION_HOST
            - name: KEYCLOAK_HOST
          image: nginx:1.19.9-alpine
          name: nginx
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            limits:
              memory: "67108864"
          tty: true
          # volumeMounts:
          #   - mountPath: /var/www/html
          #     name: iparapheur-matomo-internal-files
          #   - mountPath: /var/www/html/config/
          #     name: nginx-claim1
          #   - mountPath: /var/www/html/plugins/
          #     name: nginx-claim2
          #   - mountPath: /etc/nginx/templates/iparapheur.conf.template
          #     name: ninx-claim3
          #   - mountPath: /etc/nginx/ssl/fullchain.pem
          #     name: nginx-claim4
          #   - mountPath: /etc/nginx/ssl/privkey.pem
          #     name: nginx-claim5
      restartPolicy: Always
      # volumes:
      #   - name: iparapheur-matomo-internal-files
      #     persistentVolumeClaim:
      #       claimName: iparapheur-matomo-internal-files
      #   - name: nginx-claim1
      #     persistentVolumeClaim:
      #       claimName: nginx-claim1
      #   - name: nginx-claim2
      #     persistentVolumeClaim:
      #       claimName: nginx-claim2
      #   - name: nginx-claim3
      #     persistentVolumeClaim:
      #       claimName: nginx-claim3
      #   - name: nginx-claim4
      #     persistentVolumeClaim:
      #       claimName: nginx-claim4
      #   - name: nginx-claim5
      #     persistentVolumeClaim:
      #       claimName: nginx-claim5
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    io.kompose.service: nginx
spec:
  type: ClusterIP
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
  selector:
    io.kompose.service: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
